# liblirc-client-sys

./: Cargo.toml  Cross.toml  Dockerfile  README.md  wrapper.h
.github/workflows/: rust.yml
res/: test.conf
src/: bindings.rs  build.rs  lib.rs
