[package]
name = "rust-lirc-client-sys"
authers = ["Tyler Mayoff <tyler@tylermayoff.com>"]
description = "A rust FFI wrapper library"
version = "0.1.0"
edition = "2021"
build  = "src/build.rs"
links = "lirc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"